--- a/index.html
+++ b/index.html
@@ -4,34 +4,81 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Шиномонтаж | iOS Стиль</title>
-    <!-- Підключення Tailwind CSS з CDN -->
+    <!-- Підключення Tailwind CSS з CDN та кастомною конфігурацією -->
     <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+        tailwind.config = {
+            theme: {
+                extend: {
+                    colors: {
+                        'custom-bg': '#1c1c1e',
+                        'custom-text': '#fff',
+                        'custom-accent': '#ff3b30',
+                        'custom-accent-darker': '#cc2a22',
+                        'custom-gray': '#2c2c2e',
+                    },
+                    fontFamily: {
+                        sans: ['Inter', 'sans-serif'], // Встановлюємо Inter як основний шрифт
+                    }
+                }
+            }
+        }
+    </script>
     <!-- Підключення Font Awesome для іконок -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" xintegrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0V4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <!-- Підключення шрифту Inter (аналог San Francisco для веб) -->
+    <!-- Підключення шрифту Inter (якщо CDN Tailwind не впорається, хоча він вже в конфігурації) -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <!-- Підключення зовнішнього CSS файлу -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="min-h-screen flex flex-col">
 
-    <!-- Header -->
+    <!-- Header - Mobile-first design: Hamburger menu visible by default, desktop nav hidden -->
     <header class="header shadow-sm py-4 px-6 flex justify-between items-center sticky top-0 z-50 border-b border-gray-200 dark:border-gray-700">
-        <h1 class="text-2xl font-semibold text-primary">Шиномонтаж</h1>
+        <!-- Логотип або назва компанії -->
+        <a href="#home" class="flex items-center space-x-2">
+            <!-- Можна замінити на <img src="logo.png" alt="Логотип Шиномонтаж" class="h-8"> -->
+            <i class="fas fa-tire text-custom-accent text-3xl"></i> <!-- Використовуємо custom-accent -->
+            <span class="text-2xl font-semibold text-custom-accent">Шиномонтаж</span> <!-- Використовуємо custom-accent -->
+        </a>
+
         <div class="flex items-center space-x-4">
+            <!-- Навігація для десктопу (прихована на мобільних) -->
             <nav class="hidden md:flex space-x-6">
-                <!-- Залишаємо посилання, але вони поки що не ведуть на інші секції -->
-                <a href="#branches" class="text-lg font-medium hover:text-primary transition-colors">Філіали</a>
-                <!-- Інші посилання можна додати пізніше -->
+                <a href="#home" class="text-lg font-medium hover:text-custom-accent transition-colors">Головна</a> <!-- Використовуємо custom-accent -->
+                <a href="#branches" class="text-lg font-medium hover:text-custom-accent transition-colors">Філіали</a> <!-- Використовуємо custom-accent -->
+                <!-- Додайте інші посилання, коли будуть відповідні секції -->
             </nav>
+
+            <!-- Перемикач теми -->
             <button id="theme-toggle" class="focus:outline-none">
-                <i class="fas fa-moon"></i> <!-- Moon icon by default (dark theme) -->
+                <i class="fas fa-moon"></i> <!-- Іконка місяця за замовчуванням (темна тема) -->
+            </button>
+
+            <!-- Кнопка для мобільного меню (видима на мобільних, прихована на десктопі) -->
+            <button id="mobile-menu-button" class="md:hidden text-secondary-text-color text-2xl focus:outline-none">
+                <i class="fas fa-bars"></i>
             </button>
         </div>
     </header>
 
+    <!-- Мобільне меню (приховане за замовчуванням, показується JS) -->
+    <div id="mobile-menu" class="hidden md:hidden bg-header-bg-color shadow-lg py-4 px-6 border-b border-gray-200 dark:border-gray-700">
+        <nav class="flex flex-col space-y-3">
+            <a href="#home" class="text-lg font-medium hover:text-custom-accent transition-colors py-2">Головна</a> <!-- Використовуємо custom-accent -->
+            <a href="#branches" class="text-lg font-medium hover:text-custom-accent transition-colors py-2">Філіали</a> <!-- Використовуємо custom-accent -->
+            <!-- Додайте інші посилання для мобільного меню -->
+        </nav>
+    </div>
+
+
     <!-- Main Content -->
     <main class="flex-grow container mx-auto p-6 md:p-10 my-8 rounded-2xl">
+
+        <!-- Home Section (empty for now, but good for navigation) -->
+        <section id="home" class="mb-16 min-h-[300px] flex items-center justify-center">
+            <h2 class="text-3xl md:text-4xl font-bold text-center text-secondary-text-color">Ласкаво просимо!</h2>
+        </section>
 
         <!-- Branches Section -->
         <section id="branches" class="mb-16">
@@ -41,7 +88,7 @@
                     <h3 class="text-xl font-semibold mb-2">Філіал на вул. Шевченка, 10</h3>
                     <p class="text-secondary-text-color mb-2"><i class="fas fa-clock mr-2"></i>Пн-Сб: 9:00 - 19:00</p>
                     <p class="text-secondary-text-color mb-2"><i class="fas fa-phone mr-2"></i>+380 44 123 4567</p>
-                    <a href="https://maps.app.goo.gl/example1" target="_blank" class="text-primary hover:underline mt-2 inline-block">
+                    <a href="https://maps.app.goo.gl/example1" target="_blank" class="text-custom-accent hover:underline mt-2 inline-block"> <!-- Використовуємо custom-accent -->
                         <i class="fas fa-map-marker-alt mr-2"></i>Показати на мапі
                     </a>
                 </div>
@@ -49,7 +96,7 @@
                     <h3 class="text-xl font-semibold mb-2">Філіал на просп. Перемоги, 25</h3>
                     <p class="text-secondary-text-color mb-2"><i class="fas fa-clock mr-2"></i>Пн-Нд: 8:00 - 20:00</p>
                     <p class="text-secondary-text-color mb-2"><i class="fas fa-phone mr-2"></i>+380 44 765 4321</p>
-                    <a href="https://maps.app.goo.gl/example2" target="_blank" class="text-primary hover:underline mt-2 inline-block">
+                    <a href="https://maps.app.goo.gl/example2" target="_blank" class="text-custom-accent hover:underline mt-2 inline-block"> <!-- Використовуємо custom-accent -->
                         <i class="fas fa-map-marker-alt mr-2"></i>Показати на мапі
                     </a>
                 </div>
@@ -68,9 +115,9 @@
     <footer class="footer py-6 px-6 text-center text-secondary-text-color border-t border-gray-200 dark:border-gray-700">
         <p>&copy; 2025 Шиномонтаж. Усі права захищені.</p>
         <div class="flex justify-center space-x-4 mt-3">
-            <a href="#" class="text-secondary-text-color hover:text-primary transition-colors"><i class="fab fa-facebook-f"></i></a>
-            <a href="#" class="text-secondary-text-color hover:text-primary transition-colors"><i class="fab fa-instagram"></i></a>
-            <a href="#" class="text-secondary-text-color hover:text-primary transition-colors"><i class="fab fa-telegram-plane"></i></a>
+            <a href="#" class="text-secondary-text-color hover:text-custom-accent transition-colors"><i class="fab fa-facebook-f"></i></a> <!-- Використовуємо custom-accent -->
+            <a href="#" class="text-secondary-text-color hover:text-custom-accent transition-colors"><i class="fab fa-instagram"></i></a> <!-- Використовуємо custom-accent -->
+            <a href="#" class="text-secondary-text-color hover:text-custom-accent transition-colors"><i class="fab fa-telegram-plane"></i></a> <!-- Використовуємо custom-accent -->
         </div>
     </footer>
 
@@ -78,6 +125,8 @@
         document.addEventListener('DOMContentLoaded', () => {
             const themeToggle = document.getElementById('theme-toggle');
             const body = document.body;
+            const mobileMenuButton = document.getElementById('mobile-menu-button');
+            const mobileMenu = document.getElementById('mobile-menu');
 
             // Function to apply the theme
             function applyTheme(theme) {
@@ -120,7 +169,22 @@
                     applyTheme(event.matches ? 'dark' : 'light');
                 }
             });
+
+            // Mobile menu toggle
+            mobileMenuButton.addEventListener('click', () => {
+                mobileMenu.classList.toggle('hidden');
+            });
+
+            // Close mobile menu when a link is clicked
+            mobileMenu.querySelectorAll('a').forEach(link => {
+                link.addEventListener('click', () => {
+                    mobileMenu.classList.add('hidden');
+                });
+            });
         });
     </script>
+</body>
+</html>
+
 </body>
 </html>
