--- a/index.html
+++ b/index.html
@@ -34,39 +34,40 @@
 <body class="min-h-screen flex flex-col">
 
     <!-- Header - Mobile-first design: Hamburger menu visible by default, desktop nav hidden -->
-    <header class="header shadow-sm py-4 px-6 flex justify-between items-center sticky top-0 z-50 border-b border-gray-200 dark:border-gray-700">
-        <!-- Логотип або назва компанії -->
-        <a href="#home" class="flex items-center space-x-2">
-            <!-- Можна замінити на <img src="logo.png" alt="Логотип Шиномонтаж" class="h-8"> -->
-            <i class="fas fa-tire text-custom-accent text-3xl"></i> <!-- Використовуємо custom-accent -->
-            <span class="text-2xl font-semibold text-custom-accent">Шиномонтаж</span> <!-- Використовуємо custom-accent -->
+    <!-- Додано клас 'glass-header' для ефекту скла -->
+    <header class="header glass-header py-4 px-6 flex justify-between items-center sticky top-0 z-50 border-b border-gray-200 dark:border-gray-700">
+        <!-- Логотип або назва компанії в боксі з прозорістю -->
+        <a href="#home" class="flex items-center space-x-2 p-2 rounded-lg bg-custom-accent/50 backdrop-blur-sm">
+            <i class="fas fa-tire text-white text-3xl"></i> <!-- Іконка шини -->
+            <span class="text-2xl font-semibold text-white">Шиномонтаж</span> <!-- Назва сайту -->
         </a>
 
         <div class="flex items-center space-x-4">
             <!-- Навігація для десктопу (прихована на мобільних) -->
             <nav class="hidden md:flex space-x-6">
-                <a href="#home" class="text-lg font-medium hover:text-custom-accent transition-colors">Головна</a> <!-- Використовуємо custom-accent -->
-                <a href="#branches" class="text-lg font-medium hover:text-custom-accent transition-colors">Філіали</a> <!-- Використовуємо custom-accent -->
+                <a href="#home" class="text-lg font-medium text-white hover:text-gray-200 transition-colors">Головна</a>
+                <a href="#branches" class="text-lg font-medium text-white hover:text-gray-200 transition-colors">Філіали</a>
                 <!-- Додайте інші посилання, коли будуть відповідні секції -->
             </nav>
 
             <!-- Перемикач теми -->
-            <button id="theme-toggle" class="focus:outline-none">
+            <button id="theme-toggle" class="focus:outline-none text-white hover:text-gray-200">
                 <i class="fas fa-moon"></i> <!-- Іконка місяця за замовчуванням (темна тема) -->
             </button>
 
             <!-- Кнопка для мобільного меню (видима на мобільних, прихована на десктопі) -->
-            <button id="mobile-menu-button" class="md:hidden text-secondary-text-color text-2xl focus:outline-none">
+            <button id="mobile-menu-button" class="md:hidden text-white text-2xl focus:outline-none">
                 <i class="fas fa-bars"></i>
             </button>
         </div>
     </header>
 
     <!-- Мобільне меню (приховане за замовчуванням, показується JS) -->
-    <div id="mobile-menu" class="hidden md:hidden bg-header-bg-color shadow-lg py-4 px-6 border-b border-gray-200 dark:border-gray-700">
+    <!-- Фон мобільного меню також зробимо напівпрозорим, щоб відповідати хедеру -->
+    <div id="mobile-menu" class="hidden md:hidden bg-header-bg-color/90 backdrop-blur-sm shadow-lg py-4 px-6 border-b border-gray-200 dark:border-gray-700">
         <nav class="flex flex-col space-y-3">
-            <a href="#home" class="text-lg font-medium hover:text-custom-accent transition-colors py-2">Головна</a> <!-- Використовуємо custom-accent -->
-            <a href="#branches" class="text-lg font-medium hover:text-custom-accent transition-colors py-2">Філіали</a> <!-- Використовуємо custom-accent -->
+            <a href="#home" class="text-lg font-medium text-white hover:text-gray-200 transition-colors py-2">Головна</a>
+            <a href="#branches" class="text-lg font-medium text-white hover:text-gray-200 transition-colors py-2">Філіали</a>
             <!-- Додайте інші посилання для мобільного меню -->
         </nav>
     </div>
@@ -88,7 +89,7 @@
                     <h3 class="text-xl font-semibold mb-2">Філіал на вул. Шевченка, 10</h3>
                     <p class="text-secondary-text-color mb-2"><i class="fas fa-clock mr-2"></i>Пн-Сб: 9:00 - 19:00</p>
                     <p class="text-secondary-text-color mb-2"><i class="fas fa-phone mr-2"></i>+380 44 123 4567</p>
-                    <a href="https://maps.app.goo.gl/example1" target="_blank" class="text-custom-accent hover:underline mt-2 inline-block"> <!-- Використовуємо custom-accent -->
+                    <a href="https://maps.app.goo.gl/example1" target="_blank" class="text-custom-accent hover:underline mt-2 inline-block">
                         <i class="fas fa-map-marker-alt mr-2"></i>Показати на мапі
                     </a>
                 </div>
@@ -96,7 +97,7 @@
                     <h3 class="text-xl font-semibold mb-2">Філіал на просп. Перемоги, 25</h3>
                     <p class="text-secondary-text-color mb-2"><i class="fas fa-clock mr-2"></i>Пн-Нд: 8:00 - 20:00</p>
                     <p class="text-secondary-text-color mb-2"><i class="fas fa-phone mr-2"></i>+380 44 765 4321</p>
-                    <a href="https://maps.app.goo.gl/example2" target="_blank" class="text-custom-accent hover:underline mt-2 inline-block"> <!-- Використовуємо custom-accent -->
+                    <a href="https://maps.app.goo.gl/example2" target="_blank" class="text-custom-accent hover:underline mt-2 inline-block">
                         <i class="fas fa-map-marker-alt mr-2"></i>Показати на мапі
                     </a>
                 </div>
@@ -115,9 +116,9 @@
     <footer class="footer py-6 px-6 text-center text-secondary-text-color border-t border-gray-200 dark:border-gray-700">
         <p>&copy; 2025 Шиномонтаж. Усі права захищені.</p>
         <div class="flex justify-center space-x-4 mt-3">
-            <a href="#" class="text-secondary-text-color hover:text-custom-accent transition-colors"><i class="fab fa-facebook-f"></i></a> <!-- Використовуємо custom-accent -->
-            <a href="#" class="text-secondary-text-color hover:text-custom-accent transition-colors"><i class="fab fa-instagram"></i></a> <!-- Використовуємо custom-accent -->
-            <a href="#" class="text-secondary-text-color hover:text-custom-accent transition-colors"><i class="fab fa-telegram-plane"></i></a> <!-- Використовуємо custom-accent -->
+            <a href="#" class="text-secondary-text-color hover:text-custom-accent transition-colors"><i class="fab fa-facebook-f"></i></a>
+            <a href="#" class="text-secondary-text-color hover:text-custom-accent transition-colors"><i class="fab fa-instagram"></i></a>
+            <a href="#" class="text-secondary-text-color hover:text-custom-accent transition-colors"><i class="fab fa-telegram-plane"></i></a>
         </div>
     </footer>
 
@@ -185,6 +186,7 @@
     </script>
 </body>
 </html>
+
 
 </body>
 </html>
