--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 <body class="min-h-screen flex flex-col">
 
     <!-- Header - Компактний дизайн з іконками праворуч -->
-    <!-- Видалено border-b та пов'язані з ним класи -->
-    <header class="header glass-header py-3 px-4 flex justify-between items-center sticky top-0 z-50">
+    <!-- Додано клас 'shadow-lg' для тіні -->
+    <header class="header glass-header py-3 px-4 flex justify-between items-center sticky top-0 z-50 shadow-lg">
         <!-- Логотип/назва компанії в боксі акцентного кольору (темнішого з прозорістю) -->
         <a href="#home" class="flex items-center space-x-1.5 px-3 py-1 rounded-lg bg-custom-accent-darker/70 shadow-md">
             <i class="fas fa-clock text-white text-xl"></i> <!-- Іконка годинника -->
