--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
     <!-- Header - Компактний дизайн з іконками праворуч -->
     <!-- Додано клас 'shadow-lg' для тіні -->
     <header class="header glass-header py-3 px-4 flex justify-between items-center sticky top-0 z-50 shadow-lg">
-        <!-- Логотип/назва компанії в боксі акцентного кольору (темнішого з прозорістю) -->
-        <a href="#home" class="flex items-center space-x-1.5 px-3 py-1 rounded-lg bg-custom-accent-darker/70 shadow-md">
+        <!-- Логотип/назва компанії в боксі акцентного кольору (темнішого з прозорістю 50%) -->
+        <a href="#home" class="flex items-center space-x-1.5 px-3 py-1 rounded-lg bg-custom-accent-darker/50 shadow-md">
             <i class="fas fa-clock text-white text-xl"></i> <!-- Іконка годинника -->
             <span class="text-lg font-semibold text-white">Шиномонтаж</span> <!-- Назва сайту -->
         </a>
